# mafia_server

./: Cargo.toml  README.md  Rocket.toml  test.py
Agents/: Client.py  DQN.py  RunAgents.py
src/: mafia.rs  main.rs
src/game/: connected_player.rs  mod.rs
